--- a/Thesis-latex/resultslongerNaive.tex
+++ b/Thesis-latex/resultslongerNaive.tex
@@ -30,7 +30,7 @@
 \end{center}
 \end{minipage}
 \end{minipage}
-\caption{Results of the errors with the search grid.}
+\caption{Results of the errors.}
 \label{fig:table10yNaive}
 \makebox[\linewidth]{%
 \begin{subfigure}{.25\linewidth}
