--- a/Thesis-latex/biblio.bib
+++ b/Thesis-latex/biblio.bib
@@ -8,7 +8,17 @@
  address = {New York, NY, USA},
 } 
 
-
+@article{emh,
+Author = {Malkiel, Burton G.},
+Title = {The Efficient Market Hypothesis and Its Critics },
+Journal = {Journal of Economic Perspectives},
+Volume = {17},
+Number = {1},
+Year = {2003},
+Month = {March},
+Pages = {59-82},
+DOI = {10.1257/089533003321164958},
+URL = {http://www.aeaweb.org/articles?id=10.1257/089533003321164958}}
 
 @article{Tay2001309,
 title = "Application of support vector machines in financial time series forecasting ",
