--- a/Thesis-latex/resultsreducedNaive.tex
+++ b/Thesis-latex/resultsreducedNaive.tex
@@ -30,7 +30,7 @@
 \end{center}
 \end{minipage}
 \end{minipage}
-\caption{Results of the errors with the search grid.}
+\caption{Results of the errors.}
 \label{fig:table6mNaive}
 \makebox[\linewidth]{%
 \begin{subfigure}{.25\linewidth}
