Thesis updated with results and Gbonte commentaries

--- a/Thesis-latex/appendix/proxy1MASE10y.tex
+++ b/Thesis-latex/appendix/proxy1MASE10y.tex
@@ -5,19 +5,16 @@
 \hline
 \multicolumn{8}{|c|}{GAMMA} \tabularnewline
 \hline
- &MASE& 2\verb|^|-10 & 2\verb|^|-9 & 2\verb|^|-8 & 2\verb|^|-7 & 2\verb|^|-6 & 2\verb|^|-5 \\ 
+ &MASE& 2\verb|^|-12 & 2\verb|^|-11 & 2\verb|^|-10 & 2\verb|^|-9 & 2\verb|^|-8 & 2\verb|^|-7 \\ 
   \hline
-  &2\verb|^|1 & 1.81 & 1.81 & 1.83 & 1.85 & 1.79 & 1.77 \\ 
-  &2\verb|^|2 & 1.80 & 1.80 & 1.83 & 1.83 & 1.76 & 1.77 \\ 
-  &2\verb|^|3 & 1.79 & 1.79 & 1.82 & 1.80 & 1.76 & 1.78 \\ 
-  C&2\verb|^|4 & 1.78 & 1.79 & 1.80 & 1.75 & 1.74 & 1.81 \\ 
-  O&2\verb|^|5 & 1.80 & 1.79 & 1.81 & 1.72 & 1.74 & 1.79 \\ 
-  S&2\verb|^|6 & 1.78 & 1.79 & 1.78 & 1.74 & 1.74 & 1.88 \\ 
-  T&2\verb|^|7 & 1.78 & 1.79 & 1.73 & 1.75 & 1.74 & 1.96 \\ 
-  &2\verb|^|8 & 1.78 & 1.76 & 1.73 & 1.74 & 1.76 & 2.06 \\ 
-  &2\verb|^|9 & 1.78 & 1.74 & 1.75 & 1.74 & 1.84 & 2.19 \\ 
-  &2\verb|^|10 & 1.74 & \textbf{1.70} & 1.75 & 1.73 & 1.95 & 2.22 \\ 
-  &2\verb|^|11 & 1.71 & 1.73 & 1.74 & 1.76 & 2.09 & 2.35 \\ 
+  &2\verb|^|8 & 1.79044 & 1.78529 & 1.80140 & 1.73874 & 1.79071 & 1.81352 \\ 
+  &2\verb|^|9 & 1.80623 & 1.79191 & 1.78620 & 1.74650 & 1.84243 & 1.76748 \\ 
+  C&2\verb|^|10 & 1.80589 & 1.80569 & 1.74191 & 1.73975 & 1.82181 & 1.77245 \\ 
+  O&2\verb|^|11 & 1.79273 & 1.77552 & 1.71859 & 1.82338 & 1.83031 & 1.81464 \\ 
+  S&2\verb|^|12 & 1.81990 & 1.75347 & \textbf{1.71657} & 1.84624 & 1.78516 & 1.88845 \\ 
+  T&2\verb|^|13 & 1.79246 & 1.72801 & 1.75789 & 1.81461 & 1.79616 & 1.95771 \\ 
+  &2\verb|^|14 & 1.77212 & 1.73158 & 1.78684 & 1.85207 & 1.79162 & 2.06674 \\ 
+  &2\verb|^|15 & 1.75653 & 1.73976 & 1.85477 & 1.81897 & 1.89081 & 2.12285 \\ 
    \hline
 \end{tabular}
 \end{adjustbox}
