--- a/Thesis-latex/appendix/proxy2MASE10y.tex
+++ b/Thesis-latex/appendix/proxy2MASE10y.tex
@@ -1,21 +1,19 @@
 \begin{table}[h!]
 \centering
 \begin{adjustbox}{width=\textwidth}
-\begin{tabular}{|r|r|rrrrrrrrrrr|}
+\begin{tabular}{|r|r|rrrrrr|}
 \hline
-\multicolumn{13}{|c|}{GAMMA} \tabularnewline
+\multicolumn{8}{|c|}{GAMMA} \tabularnewline
 \hline
- &MASE& 2\verb|^|-13 & 2\verb|^|-12 & 2\verb|^|-11 & 2\verb|^|-10 & 2\verb|^|-9 & 2\verb|^|-8 & 2\verb|^|-7 & 2\verb|^|-6 & 2\verb|^|-5 & 2\verb|^|-4 & 2\verb|^|-3 \\ 
+ &MASE& 2\verb|^|-17 & 2\verb|^|-16 & 2\verb|^|-15 & 2\verb|^|-14 & 2\verb|^|-13 & 2\verb|^|-12 \\ 
   \hline
-  &2\verb|^|2 & 9.45 & 9.21 & 9.20 & 9.07 & 9.09 & 8.91 & 8.85 & 9.19 & 9.60 & 10.93 & 13.52 \\ 
-  &2\verb|^|3 & 9.08 & 8.94 & 8.78 & 8.75 & 8.79 & 8.59 & 8.54 & 8.75 & 9.19 & 10.24 & 12.94 \\ 
-  C&2\verb|^|4 & 8.82 & 8.59 & 8.39 & 8.56 & 8.55 & 8.21 & 8.45 & 8.60 & 9.02 & 9.75 & 12.44 \\ 
-  O&2\verb|^|5 & 8.47 & 8.18 & 8.30 & 8.35 & 8.22 & 8.10 & 8.17 & 8.70 & 8.86 & 9.89 & 12.28 \\ 
-  S&2\verb|^|6 & 8.02 & 8.06 & 8.22 & 8.16 & 8.16 & 8.13 & 8.29 & 8.75 & 8.94 & 10.47 & 12.16 \\ 
-  T&2\verb|^|7 & 8.00 & 8.09 & 8.17 & 7.97 & 8.09 & 8.05 & 8.56 & 8.79 & 8.67 & 11.03 & 12.66 \\ 
-  &2\verb|^|8 & 8.03 & 8.11 & 7.94 & 8.03 & 8.23 & 8.19 & 8.70 & 8.94 & 9.83 & 12.79 & 12.73 \\ 
-  &2\verb|^|9 & 8.07 & 7.98 & \textbf{7.89} & 8.08 & 8.21 & 8.20 & 8.97 & 9.04 & 10.87 & 14.29 & 12.95 \\ 
-  &2\verb|^|10 & 7.94 & 7.95 & 7.97 & 8.13 & 8.28 & 8.38 & 8.98 & 10.15 & 12.70 & 15.13 & 12.96 \\ 
+  &2\verb|^|8 & 7.473644 & 7.194699 & 6.940608 & 6.864648 & 6.748317 & 6.727057 \\ 
+  C&2\verb|^|9 & 7.202456 & 6.936179 & 6.866971 & 6.770190 & 6.736799 & 6.713800 \\ 
+  O&2\verb|^|10 & 6.941603 & 6.863174 & 6.781171 & 6.748764 & 6.722384 & 6.794555 \\ 
+  S&2\verb|^|11 & 6.859954 & 6.795901 & 6.765623 & 6.736612 & \textbf{6.706905} & 6.880406 \\ 
+  T&2\verb|^|12 & 6.801880 & 6.762022 & 6.725376 & 6.734283 & 6.768885 & 6.942683 \\ 
+  &2\verb|^|13 & 6.754997 & 6.731882 & 6.739066 & 6.741893 & 6.795644 & 6.942876 \\ 
+  &2\verb|^|14 & 6.759786 & 6.745943 & 6.748366 & 6.770068 & 6.824733 & 7.036810 \\ 
    \hline
 \end{tabular}
 \end{adjustbox}
