--- a/Thesis-latex/appendix/proxy2MSE10y.tex
+++ b/Thesis-latex/appendix/proxy2MSE10y.tex
@@ -1,21 +1,19 @@
 \begin{table}[h!]
 \centering
 \begin{adjustbox}{width=\textwidth}
-\begin{tabular}{|r|r|rrrrrrrrrrr|}
+\begin{tabular}{|r|r|rrrrrr|}
 \hline
-\multicolumn{13}{|c|}{GAMMA} \tabularnewline
+\multicolumn{8}{|c|}{GAMMA} \tabularnewline
 \hline
- &MSE& 2\verb|^|-13 & 2\verb|^|-12 & 2\verb|^|-11 & 2\verb|^|-10 & 2\verb|^|-9 & 2\verb|^|-8 & 2\verb|^|-7 & 2\verb|^|-6 & 2\verb|^|-5 & 2\verb|^|-4 & 2\verb|^|-3 \\ 
+ &MSE& 2\verb|^|-17 & 2\verb|^|-16 & 2\verb|^|-15 & 2\verb|^|-14 & 2\verb|^|-13 & 2\verb|^|-12 \\ 
   \hline
-  &2\verb|^|2 & 689.84 & 652.30 & 629.70 & 605.13 & 572.33 & 545.67 & 510.68 & 490.46 & 466.88 & 471.65 & 475.91 \\ 
-  &2\verb|^|3 & 647.47 & 623.53 & 600.29 & 574.38 & 558.74 & 528.59 & 504.05 & 482.26 & 465.59 & 482.35 & 486.52 \\ 
-  C&2\verb|^|4 & 618.14 & 595.05 & 576.89 & 562.33 & 545.86 & 517.24 & 502.64 & 481.02 & \textbf{462.29} & 501.58 & 485.56 \\ 
-  O&2\verb|^|5 & 590.32 & 572.26 & 563.85 & 550.25 & 532.24 & 513.24 & 495.26 & 483.17 & 475.22 & 520.86 & 480.59 \\ 
-  S&2\verb|^|6 & 568.43 & 561.18 & 556.57 & 537.01 & 520.76 & 509.68 & 491.07 & 474.31 & 496.04 & 527.68 & 479.64 \\ 
-  T&2\verb|^|7 & 560.15 & 560.81 & 548.61 & 525.07 & 514.23 & 503.12 & 488.57 & 466.69 & 511.32 & 537.61 & 485.54 \\ 
-  &2\verb|^|8 & 558.71 & 551.63 & 532.41 & 518.77 & 516.82 & 498.86 & 490.47 & 478.86 & 547.95 & 575.43 & 493.55 \\ 
-  &2\verb|^|9 & 552.82 & 542.27 & 524.25 & 517.09 & 512.59 & 497.05 & 479.71 & 500.38 & 598.51 & 601.92 & 492.51 \\ 
-  &2\verb|^|10 & 546.50 & 535.82 & 520.20 & 515.10 & 508.30 & 489.82 & 476.60 & 536.28 & 642.16 & 635.38 & 492.12 \\ 
+  &2\verb|^|8 & 499.43 & 487.90 & 481.30 & 479.73 & 473.36 & 475.31 \\ 
+  C&2\verb|^|9 & 488.94 & 480.84 & 478.53 & 472.92 & 476.20 & 482.90 \\ 
+  O&2\verb|^|10 & 481.63 & 477.81 & \textbf{472.13} & 475.70 & 478.48 & 491.08 \\ 
+  S&2\verb|^|11 & 479.43 & 474.27 & 477.26 & 477.65 & 481.92 & 498.18 \\ 
+  T&2\verb|^|12 & 474.91 & 475.18 & 473.52 & 480.35 & 488.18 & 504.78 \\ 
+  &2\verb|^|13 & 474.13 & 473.15 & 477.04 & 483.58 & 493.03 & 508.21 \\ 
+  &2\verb|^|14 & 474.53 & 478.44 & 479.19 & 487.33 & 496.35 & 517.45 \\ 
    \hline
 \end{tabular}
 \end{adjustbox}
