--- a/Thesis-latex/longhistorycomp.tex
+++ b/Thesis-latex/longhistorycomp.tex
@@ -5,13 +5,13 @@
 \begin{center}
 \vskip10pt
    \begin{footnotesize}
-   \begin{tabular}{|c|c|c|}
+   \begin{tabular}{|c|c|c|c|}
    \hline
-   & \multicolumn{2}{|c|}{\textbf{Proxy 1}} \\ \cline{2-3}
-   & \textbf{MSE} & \textbf{MASE}          \\ \hline
-   SVM  & $1.969437e-09$ & $1.696371$         \\ 
-   KNN & $2.929323e-09$ & $1.679673$ \\ 
-   Naive & $4.443686e-09$ & $2.821883$     \\ 
+   & \multicolumn{3}{|c|}{\textbf{Proxy 1}} \\ \cline{2-4}
+   & \textbf{MSE} & \textbf{NMSE} & \textbf{MASE}          \\ \hline
+   SVM  & $2.965806e-09$ &$3.969722$ & $1.716571$         \\ 
+   KNN & $2.87505e-09$ & $5.32743$& $1.619784$ \\ 
+   Naive & $4.738385e-09$ & $15.23972$& $2.808507$     \\ 
    \hline
    \end{tabular}
    \end{footnotesize}
@@ -21,13 +21,13 @@
 \begin{center}
 \vskip12pt
    \begin{footnotesize}
-   \begin{tabular}{|c|c|c|}
+   \begin{tabular}{|c|c|c|c|}
    \hline
-   & \multicolumn{2}{|c|}{\textbf{Proxy 2}} \\ \cline{2-3}
-   & \textbf{MSE} & \textbf{MASE}          \\ \hline
-   SVM  & $462.2867$      & $7.885050$         \\ 
-   KNN & $388.4074$      & $8.400853$ \\ 
-   NAIVE & $1213.68939$      & $25.98904$      \\ 
+   & \multicolumn{3}{|c|}{\textbf{Proxy 2}} \\ \cline{2-4}
+   & \textbf{MSE} & \textbf{NMSE} & \textbf{MASE}          \\ \hline
+   SVM  & $472.1264$  & $65.12693$ &  $6.706905$   \\ 
+   KNN & $720.085$ &$120.5991$& $10.30528$          \\ 
+   NAIVE & $2223.865$  & $281.0051$ & $18.31019$     \\ 
    \hline
    \end{tabular}
    \end{footnotesize}
