--- a/Thesis-latex/reducedhistorycomp.tex
+++ b/Thesis-latex/reducedhistorycomp.tex
@@ -5,13 +5,13 @@
 \begin{center}
 \vskip10pt
    \begin{footnotesize}
-   \begin{tabular}{|c|c|c|}
+   \begin{tabular}{|c|c|c|c|}
    \hline
-   & \multicolumn{2}{|c|}{\textbf{Proxy 1}} \\ \cline{2-3}
-   & \textbf{MSE} & \textbf{MASE}          \\ \hline
-   SVM  & $5.443549e-10$ & $1.2278$         \\ 
-   KNN & $6.492108e-10$ & $1.518099$ \\ 
-   Naive & $6.144618e-10$ & $1.483807$     \\ 
+   & \multicolumn{3}{|c|}{\textbf{Proxy 1}} \\ \cline{2-4}
+   & \textbf{MSE}  & \textbf{NMSE} & \textbf{MASE}          \\ \hline
+   SVM  & $5.443549e-10$ &$5.098590$& $1.2278$         \\ 
+   KNN & $6.492108e-10$ &$7.424236$& $1.518099$ \\ 
+   Naive & $6.144618e-10$ &$7.059421$& $1.483807$     \\ 
    \hline
    \end{tabular}
    \end{footnotesize}
@@ -21,13 +21,13 @@
 \begin{center}
 \vskip12pt
    \begin{footnotesize}
-   \begin{tabular}{|c|c|c|}
+   \begin{tabular}{|c|c|c|c|}
    \hline
-   & \multicolumn{2}{|c|}{\textbf{Proxy 2}} \\ \cline{2-3}
-   & \textbf{MSE} & \textbf{MASE}          \\ \hline
-   SVM  & $143.7454$      & $2.742375$         \\ 
-   KNN & $168.642$      & $3.0839$ \\ 
-   NAIVE & $306.892442$ & $6.477913$      \\ 
+   & \multicolumn{3}{|c|}{\textbf{Proxy 2}} \\ \cline{2-4}
+   & \textbf{MSE}  & \textbf{NMSE} & \textbf{MASE}          \\ \hline
+   SVM  & $143.7454$      &$6.807685$& $2.742375$         \\ 
+   KNN & $168.642$     &$7.031129$& $3.0839$ \\ 
+   NAIVE & $306.892442$ &$34.60042$& $6.477913$      \\ 
    \hline
    \end{tabular}
    \end{footnotesize}
