--- a/Thesis-latex/appendix/proxy1MSE10y.tex
+++ b/Thesis-latex/appendix/proxy1MSE10y.tex
@@ -5,19 +5,15 @@
 \hline
 \multicolumn{8}{|c|}{GAMMA} \tabularnewline
 \hline
-  &MSE& 2\verb|^|-10 & 2\verb|^|-9 & 2\verb|^|-8 & 2\verb|^|-7 & 2\verb|^|-6 & 2\verb|^|-5 \\ 
+  &MSE& 2\verb|^|-12 & 2\verb|^|-11 & 2\verb|^|-10 & 2\verb|^|-9 & 2\verb|^|-8 & 2\verb|^|-7 \\ 
   \hline
-  &2\verb|^|1 & 2.077E-09 & 2.027E-09 & 2.007E-09 & 1.974E-09 & 2.030E-09 & 2.324E-09 \\ 
-  &2\verb|^|2 & 2.016E-09 & 2.002E-09 & \textbf{1.969E-09} & 2.023E-09 & 2.182E-09 & 2.441E-09 \\ 
-  &2\verb|^|3 & 2.015E-09 & 1.992E-09 & 2.031E-09 & 2.051E-09 & 2.334E-09 & 2.449E-09 \\ 
-  C&2\verb|^|4 & 2.011E-09 & 2.040E-09 & 2.024E-09 & 2.198E-09 & 2.428E-09 & 2.671E-09 \\ 
-  O&2\verb|^|5 & 2.043E-09 & 2.045E-09 & 2.042E-09 & 2.305E-09 & 2.452E-09 & 2.641E-09 \\ 
-  S&2\verb|^|6 & 2.061E-09 & 2.037E-09 & 2.149E-09 & 2.261E-09 & 2.373E-09 & 2.616E-09 \\ 
-  T&2\verb|^|7 & 2.037E-09 & 2.051E-09 & 2.207E-09 & 2.382E-09 & 2.565E-09 & 2.756E-09 \\ 
-  &2\verb|^|8 & 2.019E-09 & 2.103E-09 & 2.214E-09 & 2.415E-09 & 2.506E-09 & 2.816E-09 \\ 
-  &2\verb|^|9 & 2.022E-09 & 2.140E-09 & 2.232E-09 & 2.299E-09 & 2.464E-09 & 3.171E-09 \\ 
-  &2\verb|^|10 & 2.075E-09 & 2.192E-09 & 2.358E-09 & 2.455E-09 & 2.616E-09 & 3.269E-09 \\ 
-  &2\verb|^|11 & 2.086E-09 & 2.177E-09 & 2.368E-09 & 2.397E-09 & 2.766E-09 & 4.381E-09 \\ 
+  &2\verb|^|-6 & 3.35863E-09 & 3.24118E-09 & 3.11783E-09 & 3.03140E-09 & 2.98871E-09 & 2.97512E-09 \\ 
+  C&2\verb|^|-5 & 3.22985E-09 & 3.10820E-09 & 3.02522E-09 & 2.98658E-09 & 2.97060E-09 & 2.97955E-09 \\ 
+  O&2\verb|^|-4 & 3.09636E-09 & 3.01672E-09 & 2.98108E-09 & 2.97072E-09 & 2.98533E-09 & 3.00900E-09 \\ 
+  S&2\verb|^|-3 & 3.02080E-09 & 2.97805E-09 & \textbf{2.96581E-09} & 2.98812E-09 & 3.02547E-09 & 3.08921E-09 \\ 
+  T&2\verb|^|-2 & 2.97787E-09 & 2.96856E-09 & 2.99504E-09 & 3.03805E-09 & 3.08634E-09 & 3.19141E-09 \\ 
+  &2\verb|^|-1 & 2.96851E-09 & 2.99831E-09 & 3.05608E-09 & 3.09970E-09 & 3.15810E-09 & 3.20957E-09 \\ 
+  &2\verb|^|0 & 3.00611E-09 & 3.05854E-09 & 3.11452E-09 & 3.17387E-09 & 3.20270E-09 & 3.22995E-09 \\ 
    \hline
 \end{tabular}
 \end{adjustbox}
