--- a/Thesis-latex/biblio.bib
+++ b/Thesis-latex/biblio.bib
@@ -155,6 +155,23 @@ journal = "Statistics Surveys",
 issn = "1935-7516",
 }
 
+@book{souahib2,
+author="Bontempi, Gianluca
+and Ben Taieb, Souhaib
+and Le Borgne, Yann-A{\"e}l",
+title="Machine Learning Strategies for Time Series Forecasting",
+bookTitle="Business Intelligence: Second European Summer School, eBISS 2012, Brussels, Belgium, July 15-21, 2012, Tutorial Lectures",
+year="2013",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="62--77",
+isbn="978-3-642-36318-4",
+doi="10.1007/978-3-642-36318-4_3",
+url="http://dx.doi.org/10.1007/978-3-642-36318-4_3"
+}
+
+
+
 @article{Bonte,
 title = "Conditionally dependent strategies for multiple-step-ahead prediction in local learning ",
 journal = "International Journal of Forecasting ",
@@ -238,6 +255,45 @@ month={June},}
   volume = 27,
   year = 2008
 }
+
+@ARTICLE{boxjenk, 
+author={S. Chatterjee and J. F. Bard}, 
+journal={IEEE Transactions on Systems, Man, and Cybernetics}, 
+title={A comparison of Box-Jenkins time series models with autoregressive processes}, 
+year={1985}, 
+volume={SMC-15}, 
+number={2}, 
+pages={252-259}, 
+keywords={estimation theory;filtering and prediction theory;time series;Box-Jenkins time series models;autoregressive moving-average;autoregressive processes;mean-square error;prediction;recursive estimation;time series;Computational modeling;Equations;Estimation;Forecasting;Mathematical model;Predictive models;Time series analysis}, 
+doi={10.1109/TSMC.1985.6313355}, 
+ISSN={0018-9472}, 
+month={March},}
+
+
+@ARTICLE{Hyndman06,
+    author = {Rob J Hyndman and Anne B Koehler},
+    title = {Another look at measures of forecast accuracy},
+    journal = {International Journal of Forecasting},
+    year = {2006},
+    pages = {679--688}
+}
+
+
+@article{nmse,
+title = "On the use of the normalized mean square error in evaluating dispersion model performance",
+journal = "Atmospheric Environment. Part A. General Topics",
+volume = "27",
+number = "15",
+pages = "2427 - 2434",
+year = "1993",
+note = "",
+issn = "0960-1686",
+doi = "http://dx.doi.org/10.1016/0960-1686(93)90410-Z",
+url = "http://www.sciencedirect.com/science/article/pii/096016869390410Z",
+author = "Attilio A. Poli and Mario C. Cirillo",
+
+}
+
 
 @article{kim,
   title={Financial time series forecasting using support vector machines},
@@ -419,3 +475,33 @@ Theory Group (Formerly: E1071), TU Wien},
     title = {A practical guide to support vector classification },
     year = {2010}
 }
+
+
+@misc{yahoo,
+    citeulike-article-id = {13881465},
+    citeulike-linkout-0 = {http://finance.yahoo.com/},
+    month = jan,
+    posted-at = {2017-01-01 01:01:01},
+    priority = {2},
+    title = {{Yahoo! Finance}},
+    url = {http://finance.yahoo.com/},
+    year = {2017}
+}
+
+@misc{svmpic,
+    citeulike-linkout-0 = {http://www.imtech.res.in/raghava/rbpred/algorithm.html},
+    posted-at = {2016-07-22 23:48:17},
+    priority = {3},
+    title = {{ALGORITHM of RB-Pred}},
+    url = {http://www.imtech.res.in/raghava/rbpred/algorithm.html},
+    year = {2016}
+}
+
+
+@misc{biaisvar,
+    citeulike-linkout-0 = {http://www.kdnuggets.com/2016/08/bias-variance-tradeoff-overview.html},
+    title = {{Understanding the Bias-Variance Tradeoff: An Overview}},
+    url = {http://www.kdnuggets.com/2016/08/bias-variance-tradeoff-overview.html},
+    year = {2016}
+}
+
